kubernetes/frontend.yaml
# deployment
#
# set up a deployment for the patient-group API.
# for the prototype we can pull the image from the local image registry

apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization-dashboard
spec:
  selector:
    matchLabels:
      app: organization-dashboard
  replicas: 1
  template:
    metadata:
      labels:
        app: organization-dashboard
    spec:
      containers:
        - name: organization-dashboard
          image: localhost:5000/organization-dashboard:latest

---
# service

apiVersion: v1
kind: Service
metadata:
  name: organization-dashboard
spec:
  selector:
    app: organization-dashboard
  ports:
    - port: 80 # Default port for image
      targetPort: 80 # Default port for image

---
# replacePathRegex middleware
#
# strips the first part of the request path and rewrites it to match the backend URL

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: organization-dashboard-path-middleware
spec:
  replacePathRegex:
    regex: ^/organizations
    replacement: /

---
# custom header middleware

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: organization-dashboard-header-middleware
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-For: '/organizations'

---
# ingress
#
# Sets up an ingress to route traffic to the patient-group service

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: organization-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-organization-dashboard-path-middleware@kubernetescrd, default-organization-dashboard-header-middleware@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /organization
            pathType: Prefix
            backend:
              service:
                name: organization-dashboard
                port:
                  number: 80
